Fix responsive alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,7 @@ body {
   table {
     text-align: left;
     border-spacing: 0;
+    margin: auto;
     th,
     td {
       padding: 10px 50px 10px 10px;
@@ -96,6 +97,10 @@ body {
     }
   }
 
+  .challenges {
+    max-width: 100%;
+  }
+
   .countdown {
     display: flex;
     font-size: 1.75rem;
@@ -122,13 +127,15 @@ body {
 
 @media screen and (max-width: 768px) {
   .app {
+    h2 {
+      text-align: center;
+    }
     .twoColumn {
       flex-direction: column;
       justify-content: center;
     }
     .leaderboard {
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto 60px auto;
     }
   }
 }
